--- a/frontend/Sunshine/index.html
+++ b/frontend/Sunshine/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Sunshine_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mindcare</title>
+    <title>Sunshine_Mindcare</title>
   </head>
   <body>
     <div id="root"></div>
